Backend: correct documetation
