# backend/internal/domain/dto/endpoint.go
@@ -11,8 +11,7 @@ type SchemaCreate struct {
 }
 
 type EndpointCreate struct {
-	Name        string `json:"name" validate:"required" example:"user sign-up endpoint"`
-	Description string `json:"description" example:"creates new user and return access token"`
-	Path        string `json:"path" validate:"required" example:"/user/sign-up"`
-	Method      string `json:"method" validate:"required,oneofci=GET POST PUT PATCH DELETE" enums:"GET,POST,PUT,PATCH,DELETE" example:"POST"`
+	Name   string `json:"name" validate:"required" example:"user sign-up endpoint"`
+	Path   string `json:"path" validate:"required" example:"/user/sign-up"`
+	Method string `json:"method" validate:"required,oneofci=GET POST PUT PATCH DELETE" enums:"GET,POST,PUT,PATCH,DELETE" example:"POST"`
 }
